Proyecto2/gramatica.txt
**********************LENGUAJE**********************

Array variable = new Array [15, 564, 78];
variable.sort(asc=FALSE);
variable.save("abc");

****************************************************

*********************GRAMATICA*********************

-----Terminales----- 
tk_palabraArray(PalabraReservada)
tk_id(Identificador)
tk_igual(Operador)
tk_new(PalabraReservada)
tk_corcheteApertura(Simbolo)
tk_coma-(Simbolo)
tk_corcheteCierre(Simbolo)
tk_puntoComa(Simbolo)
tk_numero(Numero)
tk_punto(Operador)
tk_sort(PalabraReservada)
tk_parentesisApertura(Simbolo)
tk_asc-(PalabraReservada)
tk_true-(PalabraReservada)
tk_false-(PalabraReservada)
tk_parentesisCierre(Simbolo)
tk_save(PalabraReservada)
tk_string(Cadena)


-----Producciones-----

<inicio> ::= <instrucciones>

<instrucciones> ::= <instruccion> <instrucciones>
                  | epsilon

<instruccion> ::= <declaracion>
                | <instruccionID>

<instruccionID> ::= tk_id(Identificador) tk_puntoComa(Simbolo) <accionArreglo>

<accionArreglo> ::= <ordenamiento>
                  | <guardar>

<declaracion> ::= tk_palabraArray(PalabraReservada) tk_id(Identificador) tk_igual(Operador) tk_new(PalabraReservada) tk_palabraArray(PalabraReservada) tk_corcheteApertura(Simbolo) <listaElementos> tk_corcheteCierre(Simbolo) tk_puntoComa(Simbolo)

<listaElementos> ::= <elemento> tk_puntoComa(Simbolo) <listaElementos>
                   | <elemento>
                   | epsilon

<elemento> ::= tk_numero(Numero)

<ordenamiento> ::= tk_sort(PalabraReservada) tk_parentesisApertura(Simbolo) tk_asc-(PalabraReservada) tk_igual(Operador) tk_true-(PalabraReservada)
                 | tk_sort(PalabraReservada) tk_parentesisApertura(Simbolo) tk_asc-(PalabraReservada) tk_igual(Operador) tk_false-(PalabraReservada) tk_parentesisCierre(Simbolo) tk_puntoComa(Simbolo)

<guardar> ::= tk_save(PalabraReservada) tk_parentesisApertura(Simbolo) tk_string(Cadena) tk_parentesisCierre(Simbolo) tk_puntoComa(Simbolo)

-----No_Terminales---- 

<inicio>
<instrucciones>
<instruccion>
<instruccionID>
<accionArreglo>
<declaracion>
<listaElementos>
<elemento>
<ordenamiento>
<guardar>
